# ame-mail-sender

./: Cargo.toml  LICENSE  README.md  config.example.toml  flake.nix  service.nix
src/: config.rs  lib.rs  main.rs  rpc.rs
